--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "morgan": "^1.8.2",
     "mysql2": "^1.3.5",
+    "passport-restify": "^1.0.1",
     "restify": "^4.3.1"
   },
   "devDependencies": {
