--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "morgan": "^1.8.2",
     "mysql2": "^1.3.5",
-    "passport-restify": "^1.0.1",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
     "restify": "^4.3.1"
   },
   "devDependencies": {
